2014-05-20 v.0.4.3
* Dot can be used as separator between name and locale instead of underscore

2013-11-21 v.0.4.2
* Bugfix when key :other is missing in the translaton

2013-11-18 v.0.4.1
* Bugfix with exception when no rules_key is present

2012-09-17 v.0.4.0
* Bugfix with proper calculation of count keys + transliteration screening

2012-09-16 v.0.3.1
* Rakfile should not be copied if using rails. Do not forget to remove the old one!

2011-08-19 v.0.3.0
* Fix for pluralization key removal

2011-08-19 v.0.2.9
* Versioin update due to the wrong gem push

2011-08-19 v.0.2.8
* Standard I18n Pluralization module is recognized

2011-05-24 v.0.2.7
* Bug with filename prefix fixed

2011-04-14 v.0.2.6
* Fogotten debug output removed

2011-04-05 v.0.2.5
* Bug with filename parsing fixed

2011-03-25 v.0.2.4
* Action translatons:remove added

2011-03-22 v. 0.2.3
* translatons:move does not keep the last key of KEY parameter. This gives the ability to rename the last key.

2011-03-16 v. 0.2.0
* Misspelling corrected